--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -5,15 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>New website, that I am making</title>
+  <title>{{ title }}</title>
 </head>
 <body>
   <header>
-    <h1>New website, that I am making</h1>
+    <h1>{{ title }}</h1>
   </header>
 
-<main><p>Content - Generated Pretty neat</p>
-</main>
+<main>{{ content | safe }}</main>
 
 </body>
 </html>
